# tfg-imu-kinematics

./: CMakeLists.txt  MPU9250.pro  README.md  mpu9250.cpp  mpu9250.h  mpu9250_global.h
